Version 6.2.1
- Fixed a bug in calculating fcache size
- Fixed object arrays in P1 bytecode (thanks again to Ada)

Version 6.2.0
- Changed waitatn() to use a pollatn() loop like the Spin2 interpreter does
- Extended littlefs code to allow multiple instances
- Fixed offset computation when structs have 8 byte subfields
- Fixed a bug in alignment of 64 bit integers
- Implemented new method pointer code for PASM backends that does not require memory allocation.
- Implemented interfaces in BASIC
- Optimized some 64 bit operations on constants (thanks to Ada)
- Various other assembly optimizations, again due to Ada

Version 6.1.8
- Changed maximum number of entries in multiple assignments from 8 to 16
- Fixed multiple uses of LET in BASIC programs
- Made sure class types are resolved when they are used as function returns
- Made UTF-8 the default encoding for FatFS (configurable via FF_LFN_UNICODE)

Version 6.1.7
- Added `DEBUG_DISABLE` constant to disable DEBUG() in Spin2 objects
- Added %b flag for binary output in printf
- Added ubin support for printf debug
- Made `virtual` a reserved keyword in C++
- Reduced memory usage of default printf

Version 6.1.6
- Added ability to double quote to include quotes in literal BASIC strings
- Allowed BASIC string constants to initialize other consts
- Fixed a problem with declaring new types that are arrays of objects
- Fixed a bug with calculating bits in BASIC direction() and output()
- Implemented flush() for FATFS files (thanks to Ada)
- Improved some error messages
- In C++ output, treat unknown types in prints as generic
- Made `interface` and `implements` reserved keywords in BASIC
- Made BASIC use of + operator on strings more consistent
- Optimized a few BASIC string expressions
- Optimized calculating length of string literals

Version 6.1.5
- Added warning about deleting unused user CORDIC instructions
- Fixed a bug in handling of (*X++) ^= N
- Fixed a bug when inlining functions with small local arrays

Version 6.1.4