@@ -1,6 +1,8 @@
 Version 6.2.1
 - Fixed a bug in calculating fcache size
+- Fixed some array offset calculations in P1 bytecode (thanks Ada)
 - Fixed object arrays in P1 bytecode (thanks again to Ada)
+- Fixed returning classes from functions, at least for some common cases
 
 Version 6.2.0
 - Changed waitatn() to use a pollatn() loop like the Spin2 interpreter does
